# Projeto_Data_Quality

./: .gitignore  DataQuality.py  Projeto.ipynb  README.md  pyproject.toml
assets/: .$Projeto_DataViz.drawio.bkp  Projeto_DataViz.drawio
commits/: Marcelo - commit log.txt  Nícolas - commit_log.txt
tests/: Forbes_Richest_Atheletes_1990_2020.csv.ipynb  Testes.ipynb  Testes_paralelos.ipynb  houses_to_rent.csv.ipynb  iphone.csv.ipynb  netflix_titles.csv.ipynb  penguins.csv.ipynb  spongebob_episodes.csv.ipynb
