[tool.poetry]
name = "projeto-04-03-dataviz"
version = "0.1.0"
description = ""
authors = ["NicolasSP90 <nicolassp90@hotmail.com>"]
readme = "README.md"
packages = [{include = "projeto_04"}]

[tool.poetry.dependencies]
python = "3.12.*"
pandas = "^2.2.3"
ipykernel = "^6.29.5"
matplotlib = "^3.9.2"
numpy = "^2.1.1"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
